# travel_agent

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  server.py
backend/src/: config.py
backend/src/agents/: __init__.py  llm_model.py
backend/src/agents/calendar/: __init__.py  base.py  tool.py
backend/src/agents/search/: __init__.py  base.py  tool.py
backend/src/agents/sharing/: __init__.py  base.py  tool.py
backend/src/agents/travel_planner/: __init__.py  base.py
backend/src/api/: app.py
backend/src/db/: __init__.py  base.py  mongodb_checkpoint.py
backend/src/graph/: builder.py  types.py
backend/src/prompts/: calendar.md  coordinator.md  planner.md  search.md  sharing.md  supervisor.md  template.py  travel_planner.md
backend/src/service/: history_service.py  workflow_service.py
frontend/: Dockerfile  README.md  app.py  config.py  pyproject.toml  run.py  utils.py
